Update contact link in navigation menu
Replaced GitHub link with a mailto link for contact.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,12 @@
       <li><a href="#about">About</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="mailto:chaudharyabhay32894@gmail.com">Contact</a></li>
-      <li><a href="https://github.com/AbhayTechCoder" target="_blank">GitHub</a></li>
+      <li>
+  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=chaudharyabhay32894@gmail.com" target="_blank">
+    Contact
+  </a>
+</li>
+
       <li><a href="https://in.linkedin.com/in/abhay-chaudhary-b24697263" target="_blank">LinkedIn</a></li>
       <li><a href="#" id="resumeLink">Resume</a></li>
     </ul>
