Update logo name from 'Abhay' to 'TechCoder'

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
   <!-- ===== NAVBAR ===== -->
   <nav>
-    <div class="logo">Abhay</div>
+    <div class="logo">TechCoder</div>
    <ul>
   <li><a href="#about">About</a></li>
   <li><a href="#skills">Skills</a></li>
