Change contact link to use mailto format

--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
    <ul>
   <li><a href="#about">About</a></li>
   <li><a href="#skills">Skills</a></li>
-  <li>
-    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=chaudharyabhay32894@gmail.com" target="_blank">
-      Contact
-    </a>
+  <a href="mailto:chaudharyabhay32894@gmail.com?subject=Hello%20Abhay&body=I%20want%20to%20connect%20with%20you.">
+  Contact
+</a>
+
   </li>
   <li><a href="https://in.linkedin.com/in/abhay-chaudhary-b24697263" target="_blank">LinkedIn</a></li>
   <li><a href="#" id="resumeLink">Resume</a></li>
