--- a/index.html
+++ b/index.html
@@ -55,12 +55,20 @@
       border-radius: 20px;
       transition: 0.3s ease;
     }
+ <!-- abhay -->
+    nav ul li a:link,
+nav ul li a:visited {
+  color: #f5f5f5;
+  text-decoration: none;
+}
 
-    nav ul li a:hover {
-      background-color: #ffcc00;
-      color: #000;
-    }
+nav ul li a:hover {
+  background-color: #ffcc00;
+  color: #000;
+}
+ <!-- abhay -->
 
+  
     header {
       display: flex;
       flex-direction: column;
