--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
       border-radius: 20px;
       transition: 0.3s ease;
     }
- <!-- abhay -->
     nav ul li a:link,
 nav ul li a:visited {
   color: #f5f5f5;
@@ -66,9 +65,13 @@ nav ul li a:hover {
   background-color: #ffcc00;
   color: #000;
 }
- <!-- abhay -->
 
-  
+
+    nav ul li a:hover {
+      background-color: #ffcc00;
+      color: #000;
+    }
+
     header {
       display: flex;
       flex-direction: column;
@@ -182,19 +185,20 @@ nav ul li a:hover {
 
   <!-- ===== NAVBAR ===== -->
   <nav>
-    <div class="logo">TechCoder</div>
-   <ul>
-  <li><a href="#about">About</a></li>
-  <li><a href="#skills">Skills</a></li>
-  <a href="mailto:chaudharyabhay32894@gmail.com?subject=Hello%20Abhay&body=I%20want%20to%20connect%20with%20you.">
-  Contact
-</a>
+    <div class="logo">Abhay</div>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+     
+      <li>
+  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=chaudharyabhay32894@gmail.com" target="_blank">
+    Contact
+  </a>
+</li>
 
-  </li>
-  <li><a href="https://in.linkedin.com/in/abhay-chaudhary-b24697263" target="_blank">LinkedIn</a></li>
-  <li><a href="#" id="resumeLink">Resume</a></li>
-</ul>
-
+      <li><a href="https://in.linkedin.com/in/abhay-chaudhary-b24697263" target="_blank">LinkedIn</a></li>
+      <li><a href="#" id="resumeLink">Resume</a></li>
+    </ul>
   </nav>
 
   <!-- ===== HEADER ===== -->
