Update logo text in navbar

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ nav ul li a:hover {
 
   <!-- ===== NAVBAR ===== -->
   <nav>
-    <div class="logo">Abhay</div>
+    <div class="logo">TechCoder Porfolio</div>
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#skills">Skills</a></li>
